force-app/main/default/objects/Threat__c/Threat__c.object-meta.xml
<CustomObject>
    <description>Not in use, no data</description>
    <label>EU-Threat</label>
    <nameField>
        <displayFormat>Z08-{0000}</displayFormat>
        <label>Threat nummer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Threats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>