force-app/main/default/objects/Threat__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Kies het ziekenhuis waar deze bedreiging speelt.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Threat</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>