force-app/main/default/objects/Threat__c/fields/Actie_1__c.field-meta.xml
<CustomField>
    <fullName>Actie_1__c</fullName>
    <description>Beschrijf de belangrijkste actie om de bedreiging(en) weg te nemen.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actie 1</label>
    <type>TextArea</type>
</CustomField>