force-app/main/default/objects/Threat__c/fields/Actie_3__c.field-meta.xml
<CustomField>
    <fullName>Actie_3__c</fullName>
    <description>Beschrijf de derde actie om de bedreiging(en) weg te nemen.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Beschrijf de derde actie om de bedreiging(en) weg te nemen.</inlineHelpText>
    <label>Actie 3</label>
    <type>TextArea</type>
</CustomField>