force-app/main/default/objects/Threat__c/fields/Bedreigde_omzet__c.field-meta.xml
<CustomField>
    <fullName>Bedreigde_omzet__c</fullName>
    <description>Geef aan hoeveel mogelijke omzet in het geding is door deze bedreiging.</description>
    <label>Bedreigde omzet</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>