force-app/main/default/objects/Threat__c/fields/Bedreiging_1__c.field-meta.xml
<CustomField>
    <fullName>Bedreiging_1__c</fullName>
    <description>Beschrijf de bedreiging.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Bedreiging</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>