force-app/main/default/objects/Threat__c/fields/Contactpersoon__c.field-meta.xml
<CustomField>
    <fullName>Contactpersoon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Als de bedreiging betrekking heeft op één bepaald contactpersoon in het ziekenhuis, voeg deze dan toe.</description>
    <label>Contactpersoon</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Threat</relationshipName>
    <type>Lookup</type>
</CustomField>