force-app/main/default/objects/Threat__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <description>Deadline waarop de bedreiging(en) opgelost moet (en) zijn.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>