force-app/main/default/objects/Threat__c/fields/External_Threat_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Threat_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Threat ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>