force-app/main/default/objects/Threat__c/fields/Naam_threat__c.field-meta.xml
<CustomField>
    <fullName>Naam_threat__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Naam threat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>