force-app/main/default/objects/Threat__c/fields/Risico__c.field-meta.xml
<CustomField>
    <fullName>Risico__c</fullName>
    <description>Geef aan hoe hoog het risico van de bedreiging(en) is.</description>
    <label>Risico</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>laag</fullName>
            </value>
            <value>
                <fullName>gemiddeld</fullName>
            </value>
            <value>
                <fullName>hoog</fullName>
            </value>
            <value>
                <fullName>zeer hoog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>