force-app/main/default/objects/Threat__c/fields/Zimmer_beinvloeder__c.field-meta.xml
<CustomField>
    <fullName>Zimmer_beinvloeder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Beïnvloeder vanuit Zimmer die helpt bij het oplossen van de bedreigingen.</description>
    <label>Zimmer beinvloeder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Threat</relationshipName>
    <type>Lookup</type>
</CustomField>